--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 requests==2.28.2
 lxml==4.9.2
-python-dotenv==1.0.0
-google-cloud-storage==2.7.0
-google-cloud-bigquery==3.2.0
+python-dotenv==0.21.1
+scrapy==2.8.0
+PyMySQL==1.0.2
