--- a/airflow.cfg
+++ b/airflow.cfg
@@ -325,7 +325,7 @@ logging_level = INFO
 # Logging level for celery. If not set, it uses the value of logging_level
 #
 # Supported values: ``CRITICAL``, ``ERROR``, ``WARNING``, ``INFO``, ``DEBUG``.
-celery_logging_level =
+celery_logging_level =INFO
 
 # Logging level for Flask-appbuilder UI.
 #
@@ -709,7 +709,7 @@ instance_name_has_markup = False
 
 # How frequently, in seconds, the DAG data will auto-refresh in graph or grid view
 # when auto-refresh is turned on
-auto_refresh_interval = 3
+auto_refresh_interval = 10
 
 # Boolean for displaying warning for publicly viewable deployment
 warn_deployment_exposure = True
@@ -818,7 +818,7 @@ celery_app_name = airflow.executors.celery_executor
 # ``airflow celery worker`` command. This defines the number of task instances that
 # a worker will take, so size up your workers based on the resources on
 # your worker box and the nature of your tasks
-worker_concurrency = 16
+worker_concurrency = 4
 
 # The maximum and minimum concurrency that will be used when starting workers with the
 # ``airflow celery worker`` command (always keep minimum processes, but grow
