--- a/airflow.cfg
+++ b/airflow.cfg
@@ -27,7 +27,7 @@ executor = SequentialExecutor
 # Airflow, regardless of the worker count. Generally this value, multiplied by the number of
 # schedulers in your cluster, is the maximum number of task instances with the running
 # state in the metadata database.
-parallelism = 32
+parallelism = 16
 
 # The maximum number of task instances allowed to run concurrently in each DAG. To calculate
 # the number of tasks that is running concurrently for a DAG, add up the number of running
@@ -320,12 +320,12 @@ encrypt_s3_logs = False
 # Logging level.
 #
 # Supported values: ``CRITICAL``, ``ERROR``, ``WARNING``, ``INFO``, ``DEBUG``.
-logging_level = INFO
+logging_level = WARNING
 
 # Logging level for celery. If not set, it uses the value of logging_level
 #
 # Supported values: ``CRITICAL``, ``ERROR``, ``WARNING``, ``INFO``, ``DEBUG``.
-celery_logging_level =INFO
+celery_logging_level = WARNING
 
 # Logging level for Flask-appbuilder UI.
 #
@@ -949,12 +949,12 @@ tls_key =
 # Task instances listen for external kill signal (when you clear tasks
 # from the CLI or the UI), this defines the frequency at which they should
 # listen (in seconds).
-job_heartbeat_sec = 5
+job_heartbeat_sec = 10
 
 # The scheduler constantly tries to trigger new tasks (look at the
 # scheduler section in the docs for more information). This defines
 # how often the scheduler should run (in seconds).
-scheduler_heartbeat_sec = 5
+scheduler_heartbeat_sec = 10
 
 # The number of times to try to schedule each DAG file
 # -1 indicates unlimited number
