zozotown_goods関連の取得&Dag作成

--- a/airflow.cfg
+++ b/airflow.cfg
@@ -320,12 +320,12 @@ encrypt_s3_logs = False
 # Logging level.
 #
 # Supported values: ``CRITICAL``, ``ERROR``, ``WARNING``, ``INFO``, ``DEBUG``.
-logging_level = WARNING
+logging_level = INFO
 
 # Logging level for celery. If not set, it uses the value of logging_level
 #
 # Supported values: ``CRITICAL``, ``ERROR``, ``WARNING``, ``INFO``, ``DEBUG``.
-celery_logging_level = WARNING
+celery_logging_level = INFO
 
 # Logging level for Flask-appbuilder UI.
 #
@@ -709,7 +709,7 @@ instance_name_has_markup = False
 
 # How frequently, in seconds, the DAG data will auto-refresh in graph or grid view
 # when auto-refresh is turned on
-auto_refresh_interval = 10
+auto_refresh_interval = 3
 
 # Boolean for displaying warning for publicly viewable deployment
 warn_deployment_exposure = True
@@ -949,12 +949,12 @@ tls_key =
 # Task instances listen for external kill signal (when you clear tasks
 # from the CLI or the UI), this defines the frequency at which they should
 # listen (in seconds).
-job_heartbeat_sec = 10
+job_heartbeat_sec = 5
 
 # The scheduler constantly tries to trigger new tasks (look at the
 # scheduler section in the docs for more information). This defines
 # how often the scheduler should run (in seconds).
-scheduler_heartbeat_sec = 10
+scheduler_heartbeat_sec = 5
 
 # The number of times to try to schedule each DAG file
 # -1 indicates unlimited number
